--- a/style.css
+++ b/style.css
@@ -34,6 +34,26 @@ html, body, canvas {
   image-rendering: pixelated;                 
 }
 
+input {
+  font-family: 'Public Pixel';
+  color: #FFFFFF;
+  font-size: 20px;
+  background-color: #00000000;
+  border: none;
+  outline: none;
+  text-align: center;
+  padding: 10px 10px 10px 0;
+  border-bottom: 2px solid #929292;
+}
+
+input::placeholder {
+  text-align: center;
+  font-family: 'Public Pixel';
+}
+
+input:focus {
+  border-bottom: 2px solid #FFFFFF;
+}
 /* canvas {
   width: auto !important;
   height: auto !important;
@@ -42,24 +62,26 @@ html, body, canvas {
 /* #page_wrapper {
   margin: 0 auto;
   min-height: 100vh;
-  max-width: 800px;
+  max-width: 1440px;
   position: relative;
 }
 
 #game_container {
-  max-width: 800px;
-  max-height: 600px;
+  max-width: 1440px;
+  max-height: 960px;
   display: flex;
   align-items: center;
   justify-content: center;
   position: absolute;
-  top:0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  inset: 0;
   margin: auto;
 } */
 
 /* #game-container>canvas {
   border-radius: 5px;
 } */
+
+#page_wrapper {
+  width: 100%;
+  height: 100%;
+}
