--- a/style.css
+++ b/style.css
@@ -54,34 +54,17 @@ input::placeholder {
 input:focus {
   border-bottom: 2px solid #FFFFFF;
 }
-/* canvas {
-  width: auto !important;
-  height: auto !important;
-} */
-
-/* #page_wrapper {
-  margin: 0 auto;
-  min-height: 100vh;
-  max-width: 1440px;
-  position: relative;
-}
-
-#game_container {
-  max-width: 1440px;
-  max-height: 960px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  inset: 0;
-  margin: auto;
-} */
-
-/* #game-container>canvas {
-  border-radius: 5px;
-} */
 
 #page_wrapper {
   width: 100%;
   height: 100%;
+  background-color: #3f3f3f;
+  border-bottom: 10px solid #3f3f3f;
+  border-top: 10px solid #3f3f3f;
+}
+
+canvas {
+  border-radius: 20px;
+  border: 15px solid #2b2b2b;
+  box-shadow: -15px 0 20px -12px rgba(0, 0, 0, 0.35), 15px 0 20px -12px rgba(0, 0, 0, 0.35);
 }
